backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: gcr.io/testplr/backend:1.0.2
        ports:
          - containerPort: 8000  

      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=testplr:us-central1:parlevelreset=tcp:5432"
          - "-credential_file=/secrets/credentials"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: secret-volume
          mountPath: /secrets/
          readOnly: true
        - name: cloudsql
          mountPath: /cloudsql

      volumes:
      - name: secret-volume
        secret:
          secretName: sql-proxy-creds
      - name: cloudsql
        emptyDir: {}
