server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: server
