ingress.yaml
# Server Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plr-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: plr-server-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: /server(/|$)(.*)
        backend:
          service:
            name: server-service
            port: 
              number: 8000

  # Frontend Ingress
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: plr-frontend-ingress
    labels:
      name: plr-frontend-ingress
  spec:
    rules:
    - host: kubernetes.docker.internal
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend-service
              port: 
                number: 3000
